# iree

build_tools/cmake/: arm.toolchain.cmake
build_tools/riscv/: arm_bootstrap.sh
compiler/src/iree/compiler/Codegen/Common/: EncodingUtils.cpp  LowerUKernelsToCalls.cpp  MaterializeEncoding.cpp  MaterializeEncodingPatterns.cpp
compiler/src/iree/compiler/Codegen/Common/CPU/: CPULowerToUKernels.cpp  CPUPrepareUkernels.cpp
compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/: UKernelOps.cpp
compiler/src/iree/compiler/Codegen/ExternalInterfaces/: CPUEncodingExternalModels.cpp  CodegenExternalModels.cpp  Utils.cpp  Utils.h
compiler/src/iree/compiler/Codegen/LLVMCPU/: KernelDispatch.cpp  LLVMCPULowerExecutableTarget.cpp  LLVMCPUSelectLoweringStrategy.cpp  Passes.cpp
compiler/src/iree/compiler/Codegen/Utils/: EncodingUtils.cpp  Utils.cpp
runtime/src/iree/builtins/ukernel/: BUILD.bazel  CMakeLists.txt  api.h  conv_2d_nchw_fchw.c  conv_2d_nchw_fchw.h  conv_2d_nchw_fchw_internal.h  conv_2d_nchw_fchw_tile.c  conv_2d_nchw_fchw_tile_generic.c  exported_bits.h  fallback.c  pack.c  query_tile_sizes.c  query_tile_sizes_internal.h  unpack.c
runtime/src/iree/builtins/ukernel/arch/arm_64/: BUILD.bazel  CMakeLists.txt  conv_2d_nchw_fchw_arm_64_entry_point.c  conv_2d_nchw_fchw_arm_64_internal.h
runtime/src/iree/builtins/ukernel/arch/riscv_64/: BUILD.bazel  CMakeLists.txt  common_riscv_64.h  config_riscv_64.h.in  conv_2d_nchw_fchw_riscv_64_base.c  conv_2d_nchw_fchw_riscv_64_entry_point.c  general_riscv_64.h  mmt4d_riscv_64_entry_point.c  pack_riscv_64_base.c  pack_riscv_64_entry_point.c  pack_riscv_64_internal.h  unpack_riscv_64_base.c  unpack_riscv_64_entry_point.c  unpack_riscv_64_internal.h
runtime/src/iree/builtins/ukernel/arch/x86_64/: BUILD.bazel  CMakeLists.txt  conv_2d_nchw_fchw_x86_64_entry_point.c  conv_2d_nchw_fchw_x86_64_internal.h
runtime/src/iree/builtins/ukernel/tools/: BUILD.bazel  CMakeLists.txt  conv_2d_nchw_fchw_test.c  test.c  test.h
