# Copyright 2022 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("//build_tools/bazel:build_defs.oss.bzl", "iree_cmake_extra_content")
load("//build_tools/bazel:iree_bitcode_library.bzl", "iree_bitcode_library", "iree_link_bitcode")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

#===------------------------------------------------------------------------===#
# UKernel bitcode files
#===------------------------------------------------------------------------===#

# All headers transitively included by code in this directory. Bazel-only.
UKERNEL_RISCV_64_INTERNAL_HEADERS = [
    "common_riscv_64.h",
    "general_riscv_64.h",
    "mmt4d_riscv_64_internal.h",
    "mmt4d_riscv_64_tiles.inl",
    "pack_riscv_64_internal.h",
    "unpack_riscv_64_internal.h",
]

iree_bitcode_library(
    name = "ukernel_bitcode_arch_riscv_64_entry_points",
    srcs = [
        "mmt4d_riscv_64_entry_point.c",
        "pack_riscv_64_entry_point.c",
        "query_tile_sizes_riscv_64_entry_point.c",
        "unpack_riscv_64_entry_point.c",
    ],
    arch = "riscv_64",
    copts = ["-march=rv64gcv"],
    internal_hdrs = UKERNEL_RISCV_64_INTERNAL_HEADERS,
)

iree_bitcode_library(
    name = "ukernel_bitcode_arch_riscv_64_v",
    srcs = [
        "mmt4d_riscv_64_v.c",
        "pack_riscv_64_base.c",
        "unpack_riscv_64_base.c",
    ],
    arch = "riscv_64",
    copts = ["-march=rv64gcv"],
    internal_hdrs = UKERNEL_RISCV_64_INTERNAL_HEADERS,
)

iree_link_bitcode(
    name = "ukernel_bitcode_arch_riscv_64",
    bitcode_files = [
        "ukernel_bitcode_arch_riscv_64_entry_points.bc",
        "ukernel_bitcode_arch_riscv_64_v.bc",
    ],
)
